<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/img_user_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/img_user_photo"
            app:layout_constraintStart_toStartOf="@+id/img_user_photo"
            app:layout_constraintTop_toBottomOf="@+id/img_user_photo"
            tools:text="@string/full_name" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/img_user_photo"
            app:layout_constraintStart_toStartOf="@+id/img_user_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="@string/user_name" />

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/follower"
            app:layout_constraintEnd_toStartOf="@+id/tv_following"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

        <TextView
            android:id="@+id/tv_following"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_follower"
            app:layout_constraintTop_toTopOf="@+id/tv_follower" />

        <TextView
            android:id="@+id/tv_count_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_follower"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_follower"
            app:layout_constraintTop_toBottomOf="@+id/tv_follower"
            tools:text="@string/tv_follower" />

        <TextView

            android:id="@+id/tv_count_following"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="@+id/tv_following"
            app:layout_constraintStart_toStartOf="@+id/tv_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_following"
            tools:text="@string/tv_following" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_count_following"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/white"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>